Potential fix for InfoWindow on Mobile

--- a/frontend/src/pages/FindZone/Maps.module.css
+++ b/frontend/src/pages/FindZone/Maps.module.css
@@ -33,5 +33,6 @@
 
     .leftContainer, .image {
         width: auto;
+        height: auto;
     } 
 }
